# click_logging_config_chatgpt4

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.rst  pyproject.toml  setup.cfg
click_logging_config_chatgpt4/: __init__.py
tests/ci/unit_tests/: test_version.py
