[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=2,<4"]

[tool.flit.metadata]
author = "My Name"
author-email = "someone@somewhere.com"
description-file = "README.rst"
home-page = "https://gitlab.com/my_project/"
module = "click_logging_config_chatgpt4"


[tool.flit.metadata.requires-extra]
dev = [
    "build_harness >=2.1, <3",
    "pre_commit >=2.13.0, <3",
]
doc = [
    "sphinx >=4.5.0, <5",
    "sphinx_rtd_theme >=1.0, <2",
]
test = [
    "pytest >=7.1.1, <8",
    "pytest-cov >=3.0, <4",
    "pytest-mock >=3.6.1, <4",
]


[tool.black]
# Don't forget to sync this with isort, .flake8
line-length = 80


[tool.isort]
# Don't forget to sync this with black, .flake8
line_length = 80
profile = "black"


[tool.coverage.run]
# branch and concurrency settings seem to be needed due to this problem:
# pytest-cov internal error "Can't combine line data with arc data"
# https://github.com/pytest-dev/pytest-cov/issues/243
branch = true
concurrency = ["multiprocessing"]
omit = ["click_logging_config_chatgpt4/.venv/*"]
source = ["click_logging_config_chatgpt4"]


[tool.coverage.report]
exclude_lines = [
    "except ImportError",
    "raise NotImplementedError",
    "pass",
    "ABCmeta",
    "abstractmethod",
    "warnings.warn",
]
fail_under = 90
precision = 0
show_missing = true
